Fixed landing layout issue

--- a/public/stylesheets/sass/landing.sass
+++ b/public/stylesheets/sass/landing.sass
@@ -3,7 +3,6 @@
 	height: 100%
 	font-family: $numerals
 	font-weight: 200
-	position: relative
 	
 	#background
 		background: #d1cecb url(https://momeant-production.s3.amazonaws.com/assets/barn-door-optimal.jpg) no-repeat 50% 50% fixed
