--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -548,8 +548,7 @@ table {
   width: 100%;
   height: 100%;
   font-family: "ff-dagny-web-pro-1", "ff-dagny-web-pro-2", sans-serif;
-  font-weight: 200;
-  position: relative; }
+  font-weight: 200; }
   #landing #background {
     background: #d1cecb url(https://momeant-production.s3.amazonaws.com/assets/barn-door-optimal.jpg) no-repeat 50% 50% fixed;
     -webkit-background-size: cover;
